* Sun Jan 22 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Switched to using puppetlabs/concat
- Fixed the startup script for EL6
- Fixed minor ordering issues
- Renamed the service to 'rsyncd' to match the service name in EL7
- Cleaned up rsyslog calls to remove logic

* Mon Jan 09 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated to use new pki scheme.

* Tue Nov 22 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Minor cleanup

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Thu Jul 07 2016 Nicholas Hughes <nicholasmhughes@gmail.com> - 4.2.2-0
- Updated the client_nets parameters to pull from global prior to using Hiera
  and to fall back to the safety of 127.0.0.1.

* Wed Apr 13 2016 Kendall Moore <kendall.moore@onyxpoint.com> - 4.2.1-0
- Changed the default provider for the rsync service to be redhat

* Thu Feb 25 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.2.0-5
- Added compliance function support

* Wed Jan 27 2016 Chris Tessmer <chris.tessmer@onypoint.com> - 4.2.0-4
- Normalized common static module assets

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.2.0-3
- migration to simplib and simpcat (lib/ only)

* Sat Aug 01 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-2
- Fixed a bug in the rsync provider that was not properly outputting the exit
  code on a failure.

* Fri Jul 31 2015 Kendall Moore <kmoore@keywcorp.com> - 4.2.0-2
- Updated to use new rsyslog module.

* Wed May 06 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.2.0-1
- Prevent file syncs during --noop runs.

* Thu Apr 02 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-0
- Made several changes, including one potentially breaking change, to make
  things consistent with modern types and providers.
  - Confine to Linux systems and systems with the command 'rsync'